@@ -20,11 +20,11 @@ origin:
 
   # Human-readable identifier for this version/release
   # Generally "version NNN", "tag SSS", "bookmark SSS"
-  release: b84ca9b63730e7d4563573a56a66317eb0087ebf (Tue May 20 01:02:58 2025).
+  release: 686bf6f1cde888898498f89ba9aefa66b683566a (Thu Jun 12 19:33:12 2025).
 
   # Revision to pull in
   # Must be a long or short commit SHA (long preferred)
-  revision: b84ca9b63730e7d4563573a56a66317eb0087ebf
+  revision: 686bf6f1cde888898498f89ba9aefa66b683566a
 
   # The package's license, where possible using the mnemonic from
   # https://spdx.org/licenses/
